--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="addShapes.js" defer></script>
   <script src="sceneexplorer.js" defer></script>
   <script src="winmgmt.js" defer></script>
-  <link rel="icon" type="image/x-icon" href="../css/HorangHill.png">
+  <link rel="icon" type="image/x-icon" href="css/HorangHill.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="windows.css">
 
@@ -81,34 +81,34 @@
 
       <div style="display: inline-block;" class="transformControls">
         <button role="menuitem" class="toolbaricon" tabindex="0" onclick="transformControls.setMode('translate');">
-          <img src="../resources/icons/arrow_nsew.png">
+          <img src="resources/icons/arrow_nsew.png">
         </button>
         <button role="menuitem" class="toolbaricon" tabindex="0" onclick="transformControls.setMode('rotate');">
-          <img src="../resources/icons/Silk_arrow_rotate_anticlockwise.png">
+          <img src="resources/icons/Silk_arrow_rotate_anticlockwise.png">
         </button>
       </div>
 
       <div style="display: inline-block;">
         <button role="menuitem" class="toolbaricon" tabindex="0" onclick="spawnCube(0,0,0,1,1,1,0xff0000)">
-          <img src="../resources/icons/brick_add.png">
+          <img src="resources/icons/brick_add.png">
         </button>
         <button role="menuitem" class="toolbaricon" tabindex="0" onclick="addCylinder(0,0,0,5,5,10,32,0xff0000)">
-          <img src="../resources/icons/database_add.png">
+          <img src="resources/icons/database_add.png">
         </button>
         <button role="menuitem" class="toolbaricon" tabindex="0" onclick="addSphere(15,32,16,0,0,0,0xff0000)">
-          <img src="../resources/icons/Contrast_high.png">
+          <img src="resources/icons/Contrast_high.png">
         </button>
         <button role="menuitem" class="toolbaricon" tabindex="0" onclick="addLight(0,0,0,10,10,0xffffff)">
-          <img src="../resources/icons/lightbulb_add.png">
+          <img src="resources/icons/lightbulb_add.png">
         </button>
       </div>
 
       <div style="display: inline-block;">
         <button role="menuitem" class="toolbaricon" tabindex="0" onclick="CreateEditorCodeWindow()">
-          <img src="../resources/icons/script_add.png">
+          <img src="resources/icons/script_add.png">
         </button>
         <button role="menuitem" class="toolbaricon" tabindex="0" onclick="playScene()">
-          <img src="../resources/icons/control_play_blue.png">
+          <img src="resources/icons/control_play_blue.png">
         </button>
       </div>
     </div>
