--- a/player/engine.html
+++ b/player/engine.html
@@ -15,7 +15,7 @@
 
         @font-face {
             font-family: horangfont;
-            src: url("../../css/Righteous-Regular.ttf");
+            src: url("../css/Righteous-Regular.ttf");
         }
 
         #menutoggle {
@@ -104,7 +104,7 @@
 
 <body style="height: 100%; width: 100%;" id="section">
     <button id="menutoggle" onclick="toggleSideBar()">
-        <img src="../../css/HorangHill.png">
+        <img src="../css/HorangHill.png">
     </button>
 
     <div id="Sidenav" class="sidenav" style="width: 0px;">
