--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
               <a onclick="addCylinder(0,0,0,5,5,10,32,0xff0000)"><i class="fa fa-cubes"></i> Cylinder</a>
               <a onclick="addSphere(15,32,16,0,0,0,0xff0000)"><i class="fa fa-cubes"></i> Sphere</a>
               <a onclick="addLight(0,0,0,10,10,0xffffff)"><i class="fa fa-cubes"></i> Light</a>
+              <a onclick="generateterrain(2, prompt('Enter terrain size... (Under development)'), 0x008000)"><i class="fa fa-cubes"></i> Terrain</a>
             </div>
           </li>
 
