--- a/player/engine.html
+++ b/player/engine.html
@@ -122,6 +122,7 @@
         <div>
             <h1>Loading Game...</h1>
             <span id="clientversion"></span>
+            <button onclick='document.getElementById("gameload").style.display = "none"; spawnPlayer();'>Skip Loading</button>
         </div>
     </div>
 
