--- a/player/engine.html
+++ b/player/engine.html
@@ -121,7 +121,7 @@
     <div class="loadingScreen" id="gameload">
         <div>
             <h1>Loading Game...</h1>
-            <span id="clientversion"></span><br>
+            <span id="clientversion"></span><br><br>
             <button onclick='document.getElementById("gameload").style.display = "none"; spawnPlayer();'>Skip loading</button>
         </div>
     </div>
