--- a/player/engine.html
+++ b/player/engine.html
@@ -119,7 +119,7 @@
 
 <body style="height: 100%; width: 100%;" id="section">
     <div class="loadingScreen" id="gameload">
-        <div>
+        <div id="loadingMessageScreenForLigmaForge">
             <h1>Loading Game...</h1>
             <span id="clientversion"></span><br><br>
             <button onclick='document.getElementById("gameload").style.display = "none"; spawnPlayer();'>Skip loading</button>
