--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>HorangHill</title>
+  <title>HorangHill Editor</title>
   <link rel="icon" type="image/x-icon" href="HorangHill.png">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
