ADD AMBIENT OCCLUSION 🔥💡

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
   <script type="text/javascript" src="js/three/GLTFLoader.js" defer></script>
   <script type="text/javascript" src="js/three/three.min.js"></script>
   <script type="text/javascript" src="js/three/OrbitControls.js"></script>
+  <script type="text/javascript" src="js/three/EffectComposer.js"></script>
+  <script type="text/javascript" src="js/three/RenderPass.js"></script>
+  <script type="text/javascript" src="js/three/SimplexNoise.js"></script>
+  <script type="text/javascript" src="js/three/SAOPass.js"></script>
+  <script type="text/javascript" src="js/three/SSAOPass.js"></script>
+  <script type="text/javascript" src="js/three/ShaderPass.js"></script>
+  <script type="text/javascript" src="js/three/CopyShader.js"></script>
+  <script type="text/javascript" src="js/three/SAOShader.js"></script>
+  <script type="text/javascript" src="js/three/SSAOShader.js"></script>
+  <script type="text/javascript" src="js/three/UnpackDepthRGBAShader.js"></script>
+  <script type="text/javascript" src="js/three/DepthLimitedBlurShader.js"></script>
   <script type="text/javascript" src="js/three/stats.min.js"></script>
   <script type="text/javascript" src="js/three/TransformControls.js"></script>
   <script type="text/javascript" src="js/three/FileSaver.min.js"></script>
