--- a/player/engine.html
+++ b/player/engine.html
@@ -2,165 +2,38 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            overflow: hidden;
-            user-select: none;
-            font-family: horangfont;
-            transition: all 0.5s ease !important;
-            background: #000000;
-            height: 100vh;
-            width: 100vw;
-        }
-
-        @font-face {
-            font-family: horangfont;
-            src: url("../css/Righteous-Regular.ttf");
-        }
-
-        #menutoggle {
-            position: absolute;
-            z-index: 2;
-            bottom: 0;
-            height: 50px;
-            width: 50px;
-            margin: 10px;
-            border: none;
-            background: none;
-            padding: 0;
-        }
-
-        #menutoggle img {
-            width: 100%;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
-        }
-
-        .sidenav {
-            height: 100%;
-            width: 0;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            background-color: #1d1d1d;
-            overflow: hidden;
-            transition: 0.5s;
-        }
-
-        .sidenav a {
-            padding: 10px 20px;
-            text-decoration: none;
-            font-size: 17.5px;
-            color: #818181;
-            display: block;
-            transition: 0.3s;
-            padding-top: 0;
-        }
-
-        .sidenav a:first-child {
-            padding-top: 10px;
-        }
-
-        .sidenav a:hover {
-            color: #f1f1f1;
-        }
-
-        .sidenav .closebtn {
-            position: absolute;
-            top: 0;
-            right: 25px;
-            font-size: 36px;
-            margin-left: 50px;
-        }
-
-        #main {
-            transition: margin-left .5s;
-            padding: 20px;
-        }
-
-        .bottomsidebar {
-            background: #2d2d2d;
-            height: 70px;
-            padding-left: 55px;
-            box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
-        }
-
-        .topsidebar {
-            height: calc(100% - 70px);
-        }
-
-        .loadingScreen {
-            width: 100vw;
-            height: 100vh;
-            position: absolute;
-            z-index: 10;
-            backdrop-filter: blur(10px);
-            background: #1d1d1dab;
-            color: white;
-            text-align: center;
-            justify-content: center;
-            place-items: center;
-            display: flex;
-        }
-
-        #devtools {
-            position: absolute;
-            z-index: 2;
-            height: 100vh;
-            box-sizing: border-box;
-            overflow: hidden;
-            right: 0;
-            transition: 0.5s;
-        }
-
-        #terminal {
-            backdrop-filter: blur(10px);
-            background: #1d1d1dab;
-            padding: 20px;
-            height: 100%;
-            color: white;
-            overflow: auto;
-        }
-
-        #skiploading {
-            position: absolute;
-            border: 0;
-            background: 0;
-            color: white;
-            bottom: 0;
-            margin-bottom: 25px;
-        }
-    </style>
-
     <title id="pagetitle">HorangHill Player</title>
+    <link rel="stylesheet" href="style.css">
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/three@0.119.1/build/three.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/cannon@0.6.1/build/cannon.min.js"></script>
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/three@0.119.1/examples/js/controls/OrbitControls.js"></script>
-    <script src="editor/playerObject.js" defer></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.20.0/firebase-database.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cannon@0.6.1/build/cannon.min.js"></script>
+
+    <script type="text/javascript" src="../js/three/three.min.js"></script>
+    <script type="text/javascript" src="../js/three/EffectComposer.js"></script>
+    <script type="text/javascript" src="../js/three/RenderPass.js"></script>
+    <script type="text/javascript" src="../js/three/SimplexNoise.js"></script>
+    <script type="text/javascript" src="../js/three/SSAOPass.js"></script>
+    <script type="text/javascript" src="../js/three/ShaderPass.js"></script>
+    <script type="text/javascript" src="../js/three/CopyShader.js"></script>
+    <script type="text/javascript" src="../js/three/SSAOShader.js"></script>
+    <script type="text/javascript" src="../js/three/UnpackDepthRGBAShader.js"></script>
+    <script type="text/javascript" src="../js/three/DepthLimitedBlurShader.js"></script>
+    <script type="text/javascript" src="../js/three/OrbitControls.js"></script>
+
+    <script type="text/javascript" src="editor/playerObject.js" defer></script>
     <script type="text/javascript" src="editor/ImprovedNoise.js"></script>
     <script type="text/javascript" src="editor/editorSpawnSDK.js" defer></script>
     <script type="text/javascript" src="editor/editor.js" defer></script>
     <script type="text/javascript" src="editor/fontawesome.js" defer></script>
-    <script src="firebaseMapLoader.js" defer></script>
-    <script>
-        function closeWindow() {
-            window.close();
-        }
-    </script>
+    <script type="text/javascript" src="firebaseMapLoader.js" defer></script>
 </head>
 
 <body id="section">
     <div class="loadingScreen" id="gameload">
-        <button id="skiploading" onclick='document.getElementById("gameload").style.display = "none"; spawnPlayer();'>Skip loading</button>
+        <button id="skiploading"
+            onclick='document.getElementById("gameload").style.display = "none"; spawnPlayer();'>Skip loading</button>
         <div id="loadingMessageScreenForLigmaForge">
             <h1>Loading Game...</h1>
             <span id="clientversion"></span>
@@ -174,7 +47,7 @@
     <div id="Sidenav" class="sidenav" style="width: 0px;">
         <div class="topsidebar" id="topsidebar">
             <a onclick="closeWindow()" id="quitbtn"><i class="fa-solid fa-angle-left"></i> Quit</a>
-            <a onclick="showConsole()"><i class="fa-solid fa-code"></i> Developer console</a>
+            <a onclick="showConsole()"><i class="fa-solid fa-code"></i> Developer log</a>
         </div>
         <div class="bottomsidebar">
             <a id="gamename">Game</a>
@@ -182,8 +55,6 @@
     </div>
 
     <div id="devtools" style="width: 0px;">
-        <div id="terminal">
-            
-        </div>
+        <div id="terminal"></div>
     </div>
 </body>
