--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
           </li>
 
           <li class="dropdown li">
-            <a href="javascript:void(0)" class="dropbtn">About</a>
-            <div class="dropdown-content">
-              <a href="#"><i class="fa fa-square-h"></i> HorangHill LigmaForge Engine. Version 1.0</a>
+            <a href="javascript:void(0)" class="dropbtn">Status</a>
+            <div class="dropdown-content counter">
             </div>
           </li>
 
