chat, player rotation

--- a/player/index.html
+++ b/player/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.20.0/firebase-database.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cannon@0.6.1/build/cannon.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/glin-profanity@1.1.9/lib/cjs/index.min.js"></script>
 
     <script type="text/javascript" src="../js/three/three.min.js"></script>
     <script type="text/javascript" src="../js/three/EffectComposer.js"></script>
@@ -43,6 +44,11 @@
     <button id="menutoggle" onclick="toggleSideBar()">
         <img src="../css/HorangHill.png">
     </button>
+
+    <div id="chats">
+        <p>Press T to chat</p>
+        <p>Welcome to HorangHill !</p>
+    </div>
 
     <div id="Sidenav" class="sidenav" style="width: 0px;">
         <div class="topsidebar" id="topsidebar">
