--- a/player/index.html
+++ b/player/index.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.20.0/firebase-database.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cannon@0.6.1/build/cannon.min.js"></script>
-
+    
+    <script type="text/javascript" src="../js/three/cannon.min.js"></script>
     <script type="text/javascript" src="../js/three/ImprovedNoise.js" defer></script>
     <script type="text/javascript" src="../js/three/three.min.js"></script>
     <script type="text/javascript" src="../js/three/OrbitControls.js"></script>
